// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bodyCaseSwitchMiddleware should merge all incoming data into one object on context 1`] = `
Object {
  "array": Array [
    "array",
  ],
  "camelCaseFour": "camelCaseFour",
  "camelCaseOne": "camelCaseOne",
  "camelCaseThree": "camelCaseThree",
  "date": 2020-01-01T08:00:00.000Z,
  "error": [Error: error],
  "pascalCaseFour": "PascalCaseFour",
  "pascalCaseOne": "PascalCaseOne",
  "pascalCaseThree": "PascalCaseThree",
  "snakeCaseFour": "snake_case_four",
  "snakeCaseOne": "snake_case_one",
  "snakeCaseThree": "snake_case_three",
  "string": "string",
}
`;

exports[`bodyCaseSwitchMiddleware should transform all incoming body to camelCase 1`] = `
Object {
  "array": Array [
    "array",
  ],
  "camelCaseOne": "camelCaseOne",
  "date": 2020-01-01T08:00:00.000Z,
  "error": [Error: error],
  "pascalCaseOne": "PascalCaseOne",
  "snakeCaseOne": "snake_case_one",
  "string": "string",
}
`;

exports[`bodyCaseSwitchMiddleware should transform all incoming params to camelCase 1`] = `
Object {
  "array": Array [
    "array",
  ],
  "camelCaseFour": "camelCaseFour",
  "camelCaseOne": "camelCaseOne",
  "camelCaseThree": "camelCaseThree",
  "date": 2020-01-01T08:00:00.000Z,
  "error": [Error: error],
  "pascalCaseFour": "PascalCaseFour",
  "pascalCaseOne": "PascalCaseOne",
  "pascalCaseThree": "PascalCaseThree",
  "snakeCaseFour": "snake_case_four",
  "snakeCaseOne": "snake_case_one",
  "snakeCaseThree": "snake_case_three",
  "string": "string",
}
`;

exports[`bodyCaseSwitchMiddleware should transform all incoming query to camelCase 1`] = `
Object {
  "array": Array [
    "array",
  ],
  "camelCaseFour": "camelCaseFour",
  "date": 2020-01-01T08:00:00.000Z,
  "error": [Error: error],
  "pascalCaseFour": "PascalCaseFour",
  "snakeCaseFour": "snake_case_four",
  "string": "string",
}
`;

exports[`bodyCaseSwitchMiddleware should transform all outgoing body to snake_case 1`] = `
Object {
  "array": Array [
    "array",
  ],
  "camel_case_two": "camelCaseTwo",
  "date": 2020-01-01T08:00:00.000Z,
  "error": [Error: error],
  "pascal_case_two": "PascalCaseTwo",
  "snake_case_two": "snake_case_two",
  "string": "string",
}
`;
